clean stale code/docs/tests