@@ -52,6 +52,15 @@ Add the dependency with sbt:
 libraryDependencies += "org.apache.fory" %% "fory-scala" % "1.1.0"
 ```
 
+### JDK25+
+
+Scala uses the Fory Java core at runtime. On JDK25+, put Fory on the module path
+and open `java.lang.invoke` to the Fory core module:
+
+```bash
+--add-opens=java.base/java.lang.invoke=org.apache.fory.core
+```
+
 ## Quick Start
 
 ```scala
